<resources>
    <string name="app_name">Lab4</string>
    <string name="input_your_text_here">Input your text here</string>
    <string name="author">Author: Melnyk Irene</string>
    <string name="text_fragment">Text fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="see_coordinates">see coordinates</string>
    <string name="widget_string">The app also implements widget, which shows location of this device. Widget updates after 30 min or when app is displayed by interval</string>
    <string name="your_location">Your location:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_text_fragment">Close text fragment</string>
    <string name="input_your_text">Input your text:</string>
    <string name="coordinates_str">Coordinates of your device in space:</string>
    <string name="x_axis">Azimuth: %1$f</string>
    <string name="y_axis">Pitch: %1$f</string>
    <string name="z_axis">Roll: %1$f</string>
    <string name="latitude_1_s">latitude: %1$s</string>
    <string name="longitude_1_s">longitude: %1$s</string>
</resources>